fix: bulk migration stuck in processing (#1155)
* fix: additional error handling for email verification when bulk migrating

* fix: proper checking of batchupdateexception

* chore: changelog and build version update

* fix: change test data generation

* fix: clear up debug messages

* fix: fix tests